<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.samarth.airindia.Fragments.SignUpFragment">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <EditText
                android:theme="@style/TextAppearence.App.TextInputLayout"
                android:id="@+id/input_firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/activatedColor"
                android:hint="@string/hint_first_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <EditText
                android:theme="@style/TextAppearence.App.TextInputLayout"
                android:id="@+id/input_lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:textColor="@color/activatedColor"
                android:hint="@string/hint_last_name" />
        </android.support.design.widget.TextInputLayout>

       <android.widget.RadioGroup

           android:id="@+id/gender"
           android:paddingTop="10dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
        <android.widget.RadioButton android:id="@+id/radio_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:buttonTint="@color/activatedColor"
            android:text="@string/option_male"
            android:textColor="@color/activatedColor"
            android:onClick="onClick"/>
        <android.widget.RadioButton android:id="@+id/radio_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:buttonTint="@color/activatedColor"
            android:text="@string/option_female"
            android:textColor="@color/activatedColor"
            android:onClick="onClick"/>
       </android.widget.RadioGroup>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <EditText
                android:theme="@style/TextAppearence.App.TextInputLayout"
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/activatedColor"

                android:hint="@string/hint_email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">

            <EditText
                android:theme="@style/TextAppearence.App.TextInputLayout"
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/activatedColor"
                android:hint="@string/hint_password" />
        </android.support.design.widget.TextInputLayout>

        <Button android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_sign_up"
            android:background="@color/ColorPrimary"
            android:layout_marginTop="40dp"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</ScrollView>

</RelativeLayout>