<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.samarth.airindia.FlightBookingFragments.SearchFlight"
    android:layout_height="match_parent"
    android:layout_width="match_parent"

    >
    <android.widget.RadioGroup

        android:id="@+id/OneWayOrRoundTrip"
        android:paddingTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.widget.RadioButton android:id="@+id/radio_one_way"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="50dp"
            android:buttonTint="@color/activatedColor"
            android:text="@string/option_one_way"
            android:textColor="@color/activatedColor"
            android:onClick="onClick"/>
        <android.widget.RadioButton android:id="@+id/radio_round_trip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:buttonTint="@color/activatedColor"
            android:text="@string/option_round_trip"
            android:textColor="@color/activatedColor"
            android:onClick="onClick"/>

    </android.widget.RadioGroup>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/from_airport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
        >
        <AutoCompleteTextView
            android:id="@+id/auto_text_from"
            android:theme="@style/TextAppearence.App.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:hint="From"
            android:textColor="@color/activatedColor"
            android:singleLine="true"
            android:layout_below="@+id/OneWayOrRoundTrip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="62dp"
            android:checked="false" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/to_airport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
        >
        <AutoCompleteTextView
            android:id="@+id/auto_text_to"
            android:theme="@style/TextAppearence.App.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:hint="To"
            android:textColor="@color/activatedColor"
            android:singleLine="true"
            android:layout_below="@+id/OneWayOrRoundTrip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="62dp"
            android:checked="false" />
    </android.support.design.widget.TextInputLayout>
    <Button android:id="@+id/btn_search_flight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_flight"
        android:background="@color/ColorPrimary"
        android:textColor="@android:color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />




</RelativeLayout>
